--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,10 @@ jobs:
         port: ${{ secrets.PORT }}
         source: "*"
         target: "/var/www/html/"
+    - name: Copiar archivos al directorio temporal
+      run: |
+        mkdir /tmp/archivos-a-copiar
+        cp -R . /tmp/archivos-a-copiar
+    - name: Copiar archivos al contenedor de Kubernetes
+      run: |
+        kubectl cp /tmp/archivos-a-copiar https-85c6cdcddd-4h5zc:/usr/local/apache2/htdocs/
