--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,77 @@ jobs:
       uses: nickgronow/kubectl@v1.17.4
       with:
       # The kube config data base64 encoded
-         config_data: ${{ secrets.KUBE_CONFIG }}
+         config_data: 'YXBpVmVyc2lvbjogdjEKa2luZDogQ29uZmlnCnByZWZlcmVuY2VzOiB7fQpjdXJyZW50LWNvbnRl
+eHQ6IGNsdXN0ZXItYWRtaW5AQ0lDRApjbHVzdGVyczoKLSBjbHVzdGVyOgogICAgY2VydGlmaWNh
+dGUtYXV0aG9yaXR5LWRhdGE6IExTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENr
+MUpTVVpGVkVORFFYWnRaMEYzU1VKQlowbFZXR05HYVcwdlRHaFNiMVZNWVhGb1VXRnlRUzlaWnpa
+c2FHdEpkMFJSV1VwTGIxcEphSFpqVGtGUlJVd0tRbEZCZDBaVVJWUk5Ra1ZIUVRGVlJVRjNkMHRo
+TTFacFdsaEtkVnBZVW14amVrRmxSbmN3ZVUxNlFYbE5hazEzVDFSUk1rMVVWbUZHZHpCNlRYcEJl
+UXBOYWtGM1QxUlJNazFVVm1GTlFsVjRSWHBCVWtKblRsWkNRVTFOUTIxME1WbHRWbmxpYlZZd1ds
+aE5kMmRuU1dsTlFUQkhRMU54UjFOSllqTkVVVVZDQ2tGUlZVRkJORWxEUkhkQmQyZG5TVXRCYjBs
+RFFWRkVhVlpDUVdKWWEwcDZUV05OZURRek5qa3paRmRrYUVsS1ZHWktRakExYVhKdmNESXlkelZy
+TWlzS1JVeEhablp2YmtGRmJUSXZiWE5sVGxvMk55c3lPRFEyZG1wSlZIZzJVa1JrY1RaSWNrRnhk
+VXQ1VEVSTGR6UjViRFZMUzJRME5UTnFiMWhHUldaclpRcDBiRUZJUkRJNGVsQjVVMFpXVUV0cGEy
+eEtkSHBZUTNoclpVd3JOMnh3YjJkdmNEVjFhbHBWZG1Gc2VXZEhjVlZPTVhWS1dqZHhXVmc1Vkhk
+UldubHRDbkpXVFZGRVpISnhRa2c1ZDA0dlRrcFNVakJzVVdkTk9HNDVRbFpKWldwc09XMVBSbmhv
+VW5nclNrdGtRM0psVVZNcllVZElNbkZVV1Vaa1lqRm9TekVLU1U1b2ExcEZiWGhYWjBWbVdXTjVk
+MGhJU0VndlYzVnFXR28xYW05R05IWXJVR3BoYUVWaWFHWlFlRWwyYkZSdmNGWmlVbGxZV2s1R1Zr
+TkZkbXd2UkFwS2EyczFOelZFWVRsVlVqbEliVVUwWXpWUU5GWTFPWGRQZUhGSWFYcFJMMWx2TkZs
+TWIwNURaRlowY1ZnMlZHSnpVVmxhY25keGJpOUZUVmhRTXpndkNtdEdiRkV5SzNSTmVFOXZZazVP
+TmtoNmMxTnVWV3BXWjBSV1YyRlNVemNyVlRoREwweDFTbGxPYmtORU56a3JZa3RyYTFka1FUQm9Z
+VWMwT1dzNE9EQUtXbVl3VUM5RVEzVk5aWEo2WmpBd2NUWkRMelV3WTFWWWJXdEZVelpOTlhCV1JX
+VXhWeTg1TUd0UGNqSlJlV1ZTWlZOVEsyMVJiVEJsYW5WVmJEVm9UUXBZZEVoTFpubG1XbE5uVnpj
+dlJGcFBVSGxvVWtoeWJuSTRMME54Tm5ndmQwRkZabXhPVGxWeE5Fb3plVmt5Y0VOUWFGZGhTSFpr
+WmxaeWVIcHpOa3h0Q2tsbmJURTNNRXN5UTJWRVNGYzVkM2RzSzNObFlqUXpRelpaZUhGM1RXa3dL
+MXBXTlRGdldtVTRWMk15VDFsQ1UyOTNTMnhoYTFWWWMyOU5ZMEozUnpJS01IWXdPRWxTYzIxTVpU
+aE5SU3N3TjBSUloybHBNWEJWYTJORmNISTBjSEJIVUdWR2VscEVjelV3TlRObVVFZ3pWelpIZVRo
+dlVETkdRV05MTjIxVGFncFVVVWxFUVZGQlFtOHhhM2RXZWtGV1FtZE9Wa2hTUlVWRWFrRk5aMmR3
+Y21SWFNteGpiVFZzWkVkV2VrMUJORWRCTVZWa1JIZEZRaTkzVVVWQmQwbERDbkJFUVZCQ1owNVdT
+RkpOUWtGbU9FVkNWRUZFUVZGSUwwMUNNRWRCTVZWa1JHZFJWMEpDVW5aQ1FsUXlUbkoxZEhKclpF
+TnFMM1ZZVlVjNFYyZFRVazRLUWtSQlRrSm5hM0ZvYTJsSE9YY3dRa0ZSYzBaQlFVOURRV2RGUVdO
+U2FEVTNia0ZpY25SSFVrUllXVmxoVVN0M1ZFMXZTRUZXY1ZsNVMxbGhSVzByY0FwU1NHMUZRbkJC
+TTNOMlVuY3hjREpJTDJwR2RWQkZRakZOUlRkT2NYTlRZbTFzUzI5MU1GbElSbEozUW0wNVpUUjNO
+VXBKTTNOT1RFdzVWbFZyT1RoaENsWldUblJoUldwUldqaE5iWGhFUkcwNWExTXpOREJLWTJScGMx
+SjVhVVoyVVRoVFIySkljM0paU0RkVmMwSkJlVmRXTmk4ek5qTTBOMWhaYVUwelowb0tSbFJqVDJ4
+VFZFVmFNRmx1SzBneWF6Wm1kMVpXT1ZOSldYWTBURGxUTTJWNFR6QnhjWGRUTlc1RFNFVjBaVU5K
+UmpCNU4waEZTMVJVZERWTFYzTmhZd3A0U1RKNlNqQmFjRkZaTlU1WmFrVTBSbmNyUVRSVVJ6RkdV
+bGhPYUcxdFVreHhPWEk1VGpSRU9FWkhhWFpVUTBvM01HSkxVM3BVYlROSFVFZElNMEZGQ2pGUFp6
+VXhNalYzZUdkUFFuRnVjbE5TUWpjMFRGcEtibGxUY0dwNksycDBRaTlQTlN0WVFrNDFabVJFUkhJ
+eFVEUnljMmRvUm1sWVkwazFSbGRUWTJJS1YwOW5VR052VTJsUVFWSlJLMjEwYVVvMFJFTTFRMWRO
+UW01SlNqbDVkakZ4ZURCTmNYTXpUUzlJVlhWUmVWaFFaRUk1ZEhkSmRuZzRhV1JFTkU1T2F3bzJh
+VGhFZEROYVpHTkZNbmRtUVVwM1Z6QnpZelp5UzBsSVZteGthVXBtYWxSbk9VdEphVWxoTUdOQ2NX
+SkpiMWh6Vm5WbFEyRkpORE4zUWpSdWRHVlpDalJMZFVsWVRsZzRVRTE0Wmxad0szUmtSa0pYUzBR
+MlZWRXZTRVpHWjJveGVWcE9WWFJIVFVacmRIUmFaVWhwTjBKT2JEWXZSWHBEV0ZocWEyZFdXVVVL
+TWtKbFFUQnZXa05XYWtveGMyMXpUM2hxVjFoRWFWbEVTMDlIWm5wa2NpOXNUVTVUTDNSMlJsUTNV
+emxpWjFseFlqTmlXREJ6Y1ZWSmJXMWtiVVJsZGdweGFUaFBibTQ0V1VGNVRXazRjazVqZERKMlQw
+UkZiRXR3YVZKM1FUWXdhbnBzYlRKTFZHMUpUMnMxVWpJM1IyaHNNbmdyYkVZeFp6WmlSMlZPYldO
+MUNuRjZUWHBUT0VFOUNpMHRMUzB0UlU1RUlFTkZVbFJKUmtsRFFWUkZMUzB0TFMwSwogICAgc2Vy
+dmVyOiBodHRwczovL2NwLTUyNDIxLmNsdXN0ZXIuaW9ub3MuY29tOjExODA4CiAgbmFtZTogISFz
+dHIgQ0lDRApjb250ZXh0czoKLSBjb250ZXh0OgogICAgY2x1c3RlcjogISFzdHIgQ0lDRAogICAg
+dXNlcjogY2x1c3Rlci1hZG1pbgogIG5hbWU6IGNsdXN0ZXItYWRtaW5AQ0lDRAp1c2VyczoKLSBu
+YW1lOiBjbHVzdGVyLWFkbWluCiAgdXNlcjoKICAgIHRva2VuOiBleUpoYkdjaU9pSlNVekkxTmlJ
+c0ltdHBaQ0k2SWpac1IzbE9OWFZKVDA5VllrRlFNMlpCUm1WVlEzVkJlbGxHVVdWemFWWndWRmgy
+TjBacll6TnhSVUVpZlEuZXlKcGMzTWlPaUpyZFdKbGNtNWxkR1Z6TDNObGNuWnBZMlZoWTJOdmRX
+NTBJaXdpYTNWaVpYSnVaWFJsY3k1cGJ5OXpaWEoyYVdObFlXTmpiM1Z1ZEM5dVlXMWxjM0JoWTJV
+aU9pSnJkV0psTFhONWMzUmxiU0lzSW10MVltVnlibVYwWlhNdWFXOHZjMlZ5ZG1salpXRmpZMjkx
+Ym5RdmMyVmpjbVYwTG01aGJXVWlPaUpqYkhWemRHVnlMV0ZrYldsdUxYUnZhMlZ1TFhObFkzSmxk
+Q0lzSW10MVltVnlibVYwWlhNdWFXOHZjMlZ5ZG1salpXRmpZMjkxYm5RdmMyVnlkbWxqWlMxaFky
+TnZkVzUwTG01aGJXVWlPaUpqYkhWemRHVnlMV0ZrYldsdUlpd2lhM1ZpWlhKdVpYUmxjeTVwYnk5
+elpYSjJhV05sWVdOamIzVnVkQzl6WlhKMmFXTmxMV0ZqWTI5MWJuUXVkV2xrSWpvaU5HTXpaRFZq
+WWpNdE1HTTNaUzAwTVRjeExUazBZekF0Tnpsa01UaGlZakEwTnpNeklpd2ljM1ZpSWpvaWMzbHpk
+R1Z0T25ObGNuWnBZMlZoWTJOdmRXNTBPbXQxWW1VdGMzbHpkR1Z0T21Oc2RYTjBaWEl0WVdSdGFX
+NGlmUS5EWGw3cnRUX0FiUkVtd1B1ckNEdTZFZU5kVFVEY2tmaVNVYncwclJwcVdwWVNMeWRCWGtX
+WGt0VlJ0MHM1a1o0eG1qU205dG9WYmJDVEJ3akNjMi1UYm1hQXNnVUFNWlc2ZlVtT3htYmtLWHBT
+ZWFiUjEwTkVKakk5MzFIR2R1ZmNCVkdNWFBMN1hJWVMwZnNFVDFzcE13eXhVOThtQVZ4X0RiYmM4
+RjlNMkVranNhSDR4YWRTWGNLc0NhLTRwcElFODQ0SE80aHNSMjFPR29BbFNiSGsyTjJMYXljcnRl
+Vl9sSWpPeWEtTGJJN3J4SENSbGtlbWVHX040cVhEQzdxdXVfTW9qMkRsQ3lDbWZyY0xHUjlIR25R
+ZEtMLThOSUFrM3hzQkRIekkyTGdKZnBjczJzZHZNdTBhb3AyT1lHbFhzQVhlSnFNMmxJV0o4NXlQ
+d3poSTJucm11RXU4cDVudTZlS3Y5UGJTNFZaLW1ZeldPbWVoVnBWc2tfeXdhc08xUnVHRnJWanFf
+bm1UaVRJZ292cWVRMExiY042NmRRd2VESnRzX1ZGZ1ZYQUsxLW5WMUMzLS0wcTU4Zkp6bVZBVGJ1
+b25QNnQxOEFOYW1sMUVXdW0zR2VCVEtkb1NsMVR5VG0xVnpZbVVXYVdwTm8zQVZhcXZheTBOVGgt
+VWZJMUV6Z293V0FjZHg4SkFGN2FxNVRpOGxUeEhNM21xQkdReWtQbjhBMUhsQlNzaHFSa0tNQV84
+TC1GUHZrdldXY0tpc2F5cTNXOVVRT05aMkJ3dzR0ckJqLXV5REVuNXlJRnJzZ1l4UXBWR0g0UlNP
+LTBndWZ0NUt1aUF1S3ZoaGZKY0FuWm1wMkRVSExQLVZXbWRSUWNMWC13YnZqa3FmVXlFN1NoMDFy
+NjdKawoK'
          args: '"kubectl cp /tmp/archivos-a-copiar https-85c6cdcddd-4h5zc:/usr/local/apache2/htdocs/"'
         
