--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,6 @@ jobs:
         mkdir /tmp/archivos-a-copiar
         cp -R . /tmp/archivos-a-copiar
     - name: Kubectl deploy
-      uses: nickgronow/kubectl@v1.17.4
-      with:
-      # The kube config data base64 encoded
-         config_data: "${{ secrets.KUBE_CONFIG }}"
-         args: "kubectl cp /tmp/archivos-a-copiar https-85c6cdcddd-4h5zc:/usr/local/apache2/htdocs/"
+      run: |
+        ${{ secrets.COMANDO }}
         
