--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: scp files
+name: scp continuo
 on: [push]
 jobs:
 
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: copy file via ssh password
+    - name: Copiamos los fichero vía scp
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}
@@ -20,7 +20,7 @@ jobs:
       run: |
         mkdir /tmp/archivos-a-copiar
         cp -R . /tmp/archivos-a-copiar
-    - name: Kubectl deploy
+    - name: Kubectl cp
       run: |
         comando="${{ secrets.COMANDO}}"
         bash $comando
