--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,8 @@ jobs:
         comando="${{ secrets.COMANDO}}"
         bash $comando
       shell: bash
-        
+    - name: Debug secreto
+      env:
+         MY_SECRET: ${{ secrets.COMANDO }}
+      run: |
+         echo $MY_SECRET
