--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
         target: "/var/www/html/"
 
   copiado:
+    name: mkdir
     runs-on: self-hosted
     steps:
     - name: Copiar archivos al directorio temporal
